[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Foliage_Retina/foliagePack_043.png" type="Texture" id=2]
[ext_resource path="res://Placeables/Tree1.gd" type="Script" id=3]
[ext_resource path="res://addons/Radial-progress-bar/RadialProgressBar.gd" type="Script" id=4]
[ext_resource path="res://addons/tile_object/tile_object.gd" type="Script" id=5]

[sub_resource type="GDScript" id=3]
script/source = "extends Control


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.9658, 64.3155 )

[sub_resource type="CircleShape2D" id=2]
radius = 21.1489

[node name="TilePlaceableObject" type="Node2D"]
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 57.831, 30.685 )
script = ExtResource( 3 )

[node name="MoistMeter" type="Control" parent="Node2D"]
margin_left = -38.0
margin_top = -205.0
margin_right = 38.0
margin_bottom = -175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Node2D/MoistMeter"]
anchor_right = 1.0
anchor_bottom = 1.0
script = SubResource( 3 )

[node name="RadialProgressBar" type="Control" parent="Node2D/MoistMeter/Control"]
anchor_left = 0.763
anchor_top = 0.337
anchor_right = 0.843
anchor_bottom = 0.735
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
radius = 30
progress = 91
bg_color = Color( 0.498039, 0.501961, 0.501961, 0.254902 )
bar_color = Color( 0.258824, 0.4, 0.878431, 1 )

[node name="Sprite" type="Sprite" parent="Node2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 0, -144.425 )
__meta__ = {
"_edit_group_": true
}

[node name="PickArea" type="Area2D" parent="Node2D"]
priority = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PickArea"]
shape = SubResource( 1 )

[node name="PlaceArea" type="Area2D" parent="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/PlaceArea"]
position = Vector2( 0, 48.2658 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Node2D/PickArea" to="Node2D" method="_on_PickArea_area_entered"]
[connection signal="input_event" from="Node2D/PickArea" to="Node2D" method="_on_PickArea_input_event"]
